# opendata-api

./: .gitignore  Makefile  README.md  docker-compose.yml
services/elasticsearch/: Dockerfile  elasticsearch.yml
services/odm/: Dockerfile  pyproject.toml
services/odm/src/api/v1/routers/: document.py  search.py
services/odm/src/core/: __init__.py  dependencies.py  exceptions.py  gunicorn_config.py  settings.py
services/odm/src/db/: mongo.py
services/odm/src/index/: data.py  index_titles.py
services/odm/src/models/: __init__.py  open_data.py
services/odm/src/schemas/: __init__.py  pagination.py  response.py  schemas.py
services/odm/src/service/: __init__.py  cross_collection.py  search.py
services/opendata-api/: Dockerfile  pyproject.toml
services/opendata-api/src/: main.py
services/opendata-api/src/api/: __init__.py
services/opendata-api/src/api/v1/application/catalog/: catalog_service.py
services/opendata-api/src/api/v1/application/open_data/: documents_service.py  dto.py  pagination_service.py  search_service.py
services/opendata-api/src/api/v1/application/search/: search_provider.py
services/opendata-api/src/api/v1/application/utils/: pagination.py
services/opendata-api/src/api/v1/domain/open_data/: entities.py
services/opendata-api/src/api/v1/routers/: __init__.py  comments.py  document.py  document_admin.py  document_docs.py  document_list.py  document_stats.py  recommendation.py  search.py  search_titles.py  search_titles_docs.py
services/opendata-api/src/core/: __init__.py  dependencies.py  exceptions.py  gunicorn_config.py  settings.py
services/opendata-api/src/db/: __init__.py  mongo.py
services/opendata-api/src/index/: delete_index.py  index_titles.py  index_titles_v2.py  run_indexing.py
services/opendata-api/src/models/: __init__.py  comments.py  open_data.py
services/opendata-api/src/recommend_system/: milvus_crud.py  milvus_init.py  milvus_mongo.py  recommendation_service.py
services/opendata-api/src/schemas/: __init__.py  response.py  schemas.py
services/opendata-api/src/service/: __init__.py  cross_collection.py  search.py
services/opendata-api/src/utils/: __init__.py  datetime_util.py  logger.py
